Count correctly how many times a method has been touched in a release without going to GitHub API Rate Limit